# VulkanPlayground

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Assets/: Cube_NoMat.glb
Project/: CMakeLists.txt  CreateShader.lua  imgui.ini  main.cpp
Project/Camera/: Camera.cpp  Camera.h
Project/Core/: Buffer.cpp  Buffer.h  ColorAttachment.cpp  ColorAttachment.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DepthResource.cpp  DepthResource.h  Descriptor.cpp  Descriptor.h  DescriptorSet.cpp  DescriptorSet.h  DynamicUniformBuffer.cpp  DynamicUniformBuffer.h  GBuffer.cpp  GBuffer.h  GlobalDescriptor.cpp  GlobalDescriptor.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGuiWrapper.cpp  ImGuiWrapper.h  Logger.h  QueueFamilyIndices.h  RenderPass.cpp  RenderPass.h  SwapChain.h  VmaUsage.cpp  VmaUsage.h
Project/Core/Image/: CubeMap.cpp  CubeMap.h  ImageLoader.cpp  ImageLoader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
Project/Core/Lights/: Light.cpp  Light.h  LightManager.cpp  LightManager.h
Project/Input/: Input.h
Project/LuaScripts/: CreateShader.lua  LuaScriptRunner.h
Project/Mesh/: Material.cpp  Material.h  MaterialManager.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Vertex.h
Project/Patterns/: Delegate.h  ServiceLocator.h  Singleton.h
Project/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Project/Timer/: GameTimer.h  TimerGraph.cpp  TimerGraph.h
Project/Types/: CircularBuffer.h
Project/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/shaders/: Blur.comp  CreateShader.lua  DownSample.comp  PBR.glsl  PBR_Graypacked.frag  Shader.cpp  Shader.h  ShaderFactory.h  ShaderFileWatcher.h  SpirvHelper.h  UpSample.comp  composite.frag  composite.vert  depth.frag  depth.vert  shader.frag  shader.vert  shader2.frag  shader2.vert  shader2D.frag  shader2D.vert  skybox.frag  skybox.vert  test.comp
Project/shaders/BaseShaders/: BaseShader.vert
Project/shaders/Logic/: Shader.cpp  Shader.h  ShaderEditor.cpp  ShaderEditor.h  ShaderFactory.h  ShaderFileWatcher.h  SpirvHelper.h
Project/vulkanbase/: VulkanBase.cpp  VulkanBase.h  VulkanTypes.cpp  VulkanTypes.h  VulkanUtil.cpp  VulkanUtil.h
includes/: CMakeLists.txt
includes/VulkanMemoryAllocator/tools/GpuMemDumpVis/: MemoryLayout.json
includes/fastgltf/include/fastgltf/: types.hpp
includes/ktx/lib/: vkloader.c
